Refactoring overloading of patterns and tests