@@ -91,7 +91,7 @@ public class PatternDeclarationsBytecodeTest extends TestRunner  {
                     .getOutput(Task.OutputKind.DIRECT);
 
             if (!javapOut.contains("public static java.lang.Object Test\\%Ljava\\|lang\\|String\\?\\%Ljava\\|lang\\|String\\?(test.Test);"))
-                throw new AssertionError("Wrongly generated signature of pattern declaration");
+                throw new AssertionError("Wrongly generated signature of pattern declaration:\n" + javapOut);
         }
 
     }
@@ -137,7 +137,7 @@ public class PatternDeclarationsBytecodeTest extends TestRunner  {
                     "pattern_type: (Ljava/lang/String;Ljava/lang/String;)V"
             };
             if (!Arrays.stream(outputs).allMatch(o -> javapOut.contains(o)))
-                throw new AssertionError("Wrongly generated basic structure of Pattern attribute");
+                throw new AssertionError("Wrongly generated basic structure of Pattern attribute:\n" + javapOut);
         }
     }
 
@@ -158,23 +158,119 @@ public class PatternDeclarationsBytecodeTest extends TestRunner  {
                 import java.util.Objects;
                                 
                 public class Test {
-                  private Collection<Integer> xs = null;
-                  private Collection<Integer> ys = null;
+                  private Integer xs = null;
+                  private Integer ys = null;
                   
-                  @MatcherAnnotation(annotField = 42)
-                  public pattern Test(@BindingAnnotation Collection<Integer> xs, @BindingAnnotation Collection<Integer> ys) {
+                  public pattern Test(@BindingAnnotation Integer xs, @BindingAnnotation Integer ys) {
                       match Test(this.xs, this.ys);
                   }
-              
-                  @Target(ElementType.METHOD)
-                  @Retention(RetentionPolicy.RUNTIME)
-                  public @interface MatcherAnnotation{
-                      int annotField();
-                  }
-              
+
                   @Target(ElementType.PARAMETER)
                   @Retention(RetentionPolicy.RUNTIME)
                   public @interface BindingAnnotation { }
+                 }
+                 """);
+
+        Files.createDirectories(classes);
+
+        {
+            new JavacTask(tb)
+                    .options("--enable-preview", "--release", SOURCE_VERSION)
+                    .outdir(classes)
+                    .files(tb.findJavaFiles(src))
+                    .run(Task.Expect.SUCCESS)
+                    .writeAll();
+
+            String javapOut = new JavapTask(tb)
+                    .options("-v")
+                    .classpath(classes.toString())
+                    .classes("test.Test")
+                    .run()
+                    .getOutput(Task.OutputKind.DIRECT);
+
+            String[] outputs = {
+                "RuntimeVisibleParameterAnnotations:",
+                    "parameter 0:",
+                        "0: #35()",
+                            "test.Test$BindingAnnotation",
+                    "parameter 1:",
+                        "0: #35()",
+                            "test.Test$BindingAnnotation"
+            };
+
+            if (!Arrays.stream(outputs).allMatch(o -> javapOut.contains(o)))
+                throw new AssertionError("Wrongly generated Pattern attribute with binding annotations:\n" + javapOut);
+        }
+
+    }
+
+    @Test
+    public void testPolymorphicSignatureInPatternAttribute(Path base) throws Exception {
+        Path current = base.resolve(".");
+        Path src = current.resolve("src");
+        Path classes = current.resolve("classes");
+        tb.writeJavaFiles(src,
+                """
+                package test;
+                import java.lang.annotation.ElementType;
+                import java.lang.annotation.Retention;
+                import java.lang.annotation.RetentionPolicy;
+                import java.lang.annotation.Target;
+                import java.util.Collection;
+                import java.util.List;
+                import java.util.Objects;
+                                
+                public class Test {
+                  private Collection<Integer> xs = null;
+                  private Collection<Integer> ys = null;
+                  
+                  public pattern Test(Collection<Integer> xs, Collection<Integer> ys) {
+                      match Test(this.xs, this.ys);
+                  }
+                 }
+                 """);
+
+        Files.createDirectories(classes);
+
+        {
+            new JavacTask(tb)
+                    .options("--enable-preview", "--release", SOURCE_VERSION)
+                    .outdir(classes)
+                    .files(tb.findJavaFiles(src))
+                    .run(Task.Expect.SUCCESS)
+                    .writeAll();
+
+            String javapOut = new JavapTask(tb)
+                    .options("-v")
+                    .classpath(classes.toString())
+                    .classes("test.Test")
+                    .run()
+                    .getOutput(Task.OutputKind.DIRECT);
+
+            String[] outputs = {
+                    "Signature: #32                          // (Ljava/util/Collection<Ljava/lang/Integer;>;Ljava/util/Collection<Ljava/lang/Integer;>;)V",
+            };
+
+            if (!Arrays.stream(outputs).allMatch(o -> javapOut.contains(o)))
+                throw new AssertionError("Wrongly generated Signature in Pattern attribute with generic bindings:\n" + javapOut);
+        }
+    }
+
+    @Test
+    public void testParameterAttributeInPatternAttribute(Path base) throws Exception {
+        Path current = base.resolve(".");
+        Path src = current.resolve("src");
+        Path classes = current.resolve("classes");
+        tb.writeJavaFiles(src,
+                """
+                package test;
+                public class Test {
+                     private final String name = "";
+                     private final String username = "";
+
+                     public pattern Test(String name, String username) {
+                          match Test(this.name, this.username);
+                     }
                  }
                  """);
 
@@ -196,19 +292,14 @@ public class PatternDeclarationsBytecodeTest extends TestRunner  {
                     .getOutput(Task.OutputKind.DIRECT);
 
             String[] outputs = {
-                "Signature: #32                          // (Ljava/util/Collection<Ljava/lang/Integer;>;Ljava/util/Collection<Ljava/lang/Integer;>;)V",
-                "RuntimeVisibleParameterAnnotations:",
-                    "parameter 0:",
-                        "0: #42()",
-                            "test.Test$BindingAnnotation",
-                    "parameter 1:",
-                        "0: #42()",
-                            "test.Test$BindingAnnotation"
+                    "MethodParameters:",
+                    "Name                           Flags",
+                    "name",
+                    "username"
             };
 
             if (!Arrays.stream(outputs).allMatch(o -> javapOut.contains(o)))
-                throw new AssertionError("Wrongly generated Pattern attribute with binding annotations and generic arguments");
+                throw new AssertionError("Wrongly MethodParameters attribute:\n" + javapOut);
         }
-
     }
 }
